# qt_spreadsheet

./: CMakeLists.txt  CellRange.cpp  CellRange.h  FactoryFunction.cpp  FactoryFunction.h  Function.h  Max.cpp  Max.h  Mean.cpp  Mean.h  Min.cpp  Min.h  Spreadsheet.cpp  Spreadsheet.h  Subject.h  Sum.cpp  Sum.h  main.cpp
src/: CellRange.cpp  CellRange.h  Controller.cpp  Controller.h  FactoryFunction.cpp  FactoryFunction.h  Function.cpp  Function.h  MainWindow.cpp  MainWindow.h  Max.cpp  Max.h  Mean.cpp  Mean.h  Min.cpp  Min.h  Model.cpp  Model.h  Observer.h  Spreadsheet.h  Sum.cpp  Sum.h  Utility.h  View.cpp  View.h
test/: CMakeLists.txt  CellRangeFixture.cpp  CellRangeTest.cpp  FactoryFunctionFixture.cpp  FactoryFunctionTest.cpp  FunctionFixture.cpp  FunctionTest.cpp  MVCFixture.cpp  MainWindowTest.cpp  ModelTest.cpp  SpreadsheetTest.cpp  __CellRangeFixture.cpp  __CellRangeTest.cpp  __SpreadsheetTest.cpp  runAllTests.cpp
test_qt/: CMakeLists.txt  TestGui.cpp
